--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <package format="3">
   <name>imitrob_hri</name>
   <version>0.1.0</version>
-  <description></description>
+  <description>imitrob_hri</description>
   <maintainer email="petr.vanc@cvut.com">Petr Vanc</maintainer>
   <author></author>
   <license>BSD</license>
